[gd_scene load_steps=15 format=3 uid="uid://ccb0nkt8llyhg"]

[ext_resource type="Script" path="res://Scene/GameBoard.gd" id="1_hyekb"]
[ext_resource type="PackedScene" uid="uid://bcbj38fvkj2b5" path="res://Scene/Player.tscn" id="1_lscfy"]
[ext_resource type="Texture2D" uid="uid://b7mqwj77mfgeo" path="res://Resources/tilese_resized.png" id="1_saa2u"]
[ext_resource type="Script" path="res://Scene/UnitPath.gd" id="2_3478f"]
[ext_resource type="Texture2D" uid="uid://u7p5s4syem8y" path="res://Sprites/UnitPath.png" id="3_od8ng"]
[ext_resource type="Resource" uid="uid://c3ides7pfvous" path="res://Resources/Grid.tres" id="4_diw5h"]
[ext_resource type="PackedScene" uid="uid://crrclr6rtjda" path="res://Scene/UI.tscn" id="7_tpfhc"]
[ext_resource type="Texture2D" uid="uid://dtv0kmyg46bva" path="res://Sprites/Jepun.png" id="8_2j01w"]
[ext_resource type="Texture2D" uid="uid://cc5kcoo7ga4ok" path="res://Sprites/Ling.png" id="8_vuxbj"]
[ext_resource type="PackedScene" uid="uid://cx7v1v1x1dgib" path="res://Scene/Cursor.tscn" id="11_saeha"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vsyxm"]
texture = ExtResource("1_saa2u")
texture_region_size = Vector2i(320, 320)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -80)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -80)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -80)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -80)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, -80)
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, -80)

[sub_resource type="TileSet" id="TileSet_wkmdi"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(320, 160)
sources/0 = SubResource("TileSetAtlasSource_vsyxm")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ed4qq"]
texture = ExtResource("3_od8ng")
texture_region_size = Vector2i(320, 320)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 80)
0:0/0/modulate = Color(1, 1, 1, 0.490196)

[sub_resource type="TileSet" id="TileSet_agrgs"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(320, 160)
sources/1 = SubResource("TileSetAtlasSource_ed4qq")

[node name="Level1" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_wkmdi")
format = 2
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(-131073, 0, 0, -65537, 0, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, 131072, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, -131066, 0, 0, -65530, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 262149, 0, 0, 196613, 0, 0, 131077, 0, 0, 65541, 0, 0, 5, 0, 0, -65531, 0, 0, -131067, 0, 0, -131068, 0, 0, -131069, 0, 0, -131070, 0, 0, -131071, 0, 0, -65535, 0, 0, 1, 0, 0, 65537, 0, 0, 196608, 0, 0, 196609, 0, 0, 131074, 0, 0, 65538, 0, 0, 3, 0, 0, -65533, 0, 0, 131073, 0, 0, 2, 0, 0, 65539, 0, 0, -65534, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 131076, 0, 0, 131075, 0, 0, 4, 0, 0, -65532, 0, 0, 65540, 0, 0, 65536, 0, 0, 0, 0, 0, -65536, 0, 0, -131072, 0, 0, 262151, 65536, 0, 196615, 65536, 0, 131079, 65536, 0, 65543, 65536, 0, 7, 65536, 0, -65529, 65536, 0, -131065, 65536, 0, -196601, 65536, 0, -262137, 65536, 0, -262138, 65536, 0, -262139, 65536, 0, -262140, 65536, 0, -262141, 65536, 0, -262142, 65536, 0, -262143, 65536, 0, -262144, 65536, 0, -196609, 65536, 0, -196610, 65536, 0, -131074, 65536, 0, -65538, 65536, 0, -2, 65536, 0, 65534, 65536, 0, 131070, 65536, 0, 196606, 65536, 0, 262142, 65536, 0, 327678, 65536, 0, 393214, 65536, 0, 393215, 65536, 0, 327680, 65536, 0, 327681, 65536, 0, 327682, 65536, 0, 327683, 65536, 0, 327684, 65536, 0, 327685, 65536, 0, 327686, 65536, 0, 327687, 65536, 0, 327688, 327680, 0, 262152, 327680, 0, 196616, 327680, 0, 131080, 327680, 0, 65544, 327680, 0, 8, 327680, 0, -65528, 327680, 0, -131064, 327680, 0, -196600, 327680, 0, -262136, 327680, 0, 393223, 327680, 0, 393222, 327680, 0, 393221, 327680, 0, 393220, 327680, 0, 393219, 327680, 0, 393218, 327680, 0, 393217, 327680, 0, 393216, 327680, 0, 458751, 327680, 0, 458750, 327680, 0, 393213, 327680, 0, 327677, 327680, 0, 262141, 327680, 0, 196605, 327680, 0, 131069, 327680, 0, 65533, 327680, 0, -3, 327680, 0, -65539, 327680, 0, -131075, 327680, 0, -196611, 327680, 0, -262146, 327680, 0, -262145, 327680, 0, -327680, 327680, 0, -327679, 327680, 0, -327678, 327680, 0, -327677, 327680, 0, -327676, 327680, 0, -327675, 327680, 0, -327674, 327680, 0, -327673, 327680, 0, 524287, 327680, 0, 458752, 327680, 0, 458753, 327680, 0, 458754, 327680, 0, 458755, 327680, 0, 458756, 327680, 0, 458757, 327680, 0, 458758, 327680, 0, 262153, 327680, 0, 196617, 327680, 0, 131081, 327680, 0, 65545, 327680, 0, 9, 327680, 0, -65527, 327680, 0, -131063, 327680, 0, -196599, 327680, 0, -393210, 327680, 0, -393211, 327680, 0, -393212, 327680, 0, -393213, 327680, 0, -393214, 327680, 0, -393215, 327680, 0, -393216, 327680, 0, -327681, 327680, 0, 327676, 327680, 0, 262140, 327680, 0, 196604, 327680, 0, 131068, 327680, 0, 65532, 327680, 0, -4, 327680, 0, -65540, 327680, 0, -131076, 327680, 0)

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("1_hyekb")

[node name="TileMap" type="TileMap" parent="GameBoard"]
format = 2

[node name="UnitPath" type="TileMap" parent="GameBoard"]
y_sort_enabled = true
tile_set = SubResource("TileSet_agrgs")
format = 2
layer_0/y_sort_enabled = true
script = ExtResource("2_3478f")
grid = ExtResource("4_diw5h")

[node name="Player" type="Node2D" parent="GameBoard"]

[node name="Soerjo" parent="GameBoard/Player" instance=ExtResource("1_lscfy")]
move_range = 2

[node name="Ling" parent="GameBoard/Player" instance=ExtResource("1_lscfy")]
position = Vector2(323, 147)
skin = ExtResource("8_vuxbj")
move_range = 5

[node name="Enemy" type="Node2D" parent="GameBoard"]

[node name="Enemy1" parent="GameBoard/Enemy" instance=ExtResource("1_lscfy")]
position = Vector2(146, 551)
skin = ExtResource("8_2j01w")

[node name="CharacterBody2D" parent="GameBoard/Enemy" instance=ExtResource("1_lscfy")]
visible = false

[node name="CharacterBody2D2" parent="GameBoard/Enemy" instance=ExtResource("1_lscfy")]
visible = false

[node name="Cursor" parent="GameBoard" instance=ExtResource("11_saeha")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(533, 330)
zoom = Vector2(0.25, 0.25)

[node name="Control" parent="." instance=ExtResource("7_tpfhc")]
visible = false
offset_left = -584.0
offset_top = -288.0
offset_right = -584.0
offset_bottom = -288.0

[connection signal="accept_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_accept_pressed"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_check_hoverable_tiles"]
